--- a/templates/AndroidManifest.tmpl.xml
+++ b/templates/AndroidManifest.tmpl.xml
@@ -59,7 +59,7 @@
 
   <uses-feature android:glEsVersion="0x00020000" android:required="true" />
   <uses-feature android:name="android.hardware.touchscreen"
-                  required="false" />
+                  android:required="false" />
   <uses-sdk android:minSdkVersion="9" android:targetSdkVersion="{{config.targetsdk}}"/>
 
   {% if config.expansion %}
