added new autobackup xml that points to the external app directory

--- a/templates/AndroidManifest.tmpl.xml
+++ b/templates/AndroidManifest.tmpl.xml
@@ -17,6 +17,7 @@
   <application android:label="@string/appName" 
                android:icon="@mipmap/ic_launcher"
 	       android:fullBackupContent="@xml/backup"
+           android:dataExtractionRules="@xml/backup_new"
 		android:resizeableActivity="true"
                >
 
